JavaScriptCore has a weak external symbol in it https://bugs.webkit.org/show_bug.cgi?id=167282

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-01-23
Reviewed by Yusuke Suzuki.

* debugger/Debugger.cpp:
(JSC::Debugger::ProfilingClient::~ProfilingClient):
* debugger/Debugger.h:
Avoid possible weak external symbol.

Canonical link: https://commits.webkit.org/184349@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211037 268f45cc-cd09-0410-ab3c-d52691b4dbfc